stargas/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>HHAU_Group__c</fullName>
        <label>HHAU Group</label>
        <picklist>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Program Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Generated Program Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move-ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Sales Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HHAU_Order_Number__c</fullName>
        <label>HHAU Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHAU_Tech_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HHAU Tech/Employee Referrer (lookup)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HHAU_Type__c</fullName>
        <description>Returns the Energy Acquisition Code for the HHAU group or HHAU sub-group chosen.</description>
        <formula>IF ( TEXT(HHAU__c) = &quot;AE TELEMARKETING&quot;, &quot;94&quot;,
IF ( TEXT(HHAU__c) = &quot;Acct Exec Advertising&quot;, &quot;92&quot;,
IF ( TEXT(HHAU__c) = &quot;Acct Exec Direct Mail&quot;, &quot;93&quot;,
IF ( TEXT(HHAU__c) = &quot;ACCT EXEC INTERNET&quot;, &quot;95&quot;,
IF ( TEXT(HHAU__c) = &quot;Relocation&quot;, &quot;21&quot;,
IF ( TEXT(HHAU__c) = &quot;Company Sales Agreement&quot;, &quot;10&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Advertising&quot;, &quot;2&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Corporate Channel Partner&quot;, &quot;11&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Corporate Mailer&quot;, &quot;19&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Corporate Program Referrals&quot;, &quot;25&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Credit Reinstates&quot;, &quot;45&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Direct Mail&quot;, &quot;3&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Employee ACCOUNT&quot;, &quot;99&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Field Generated Program Referrals&quot;, &quot;23&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Internet&quot;, &quot;9&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;MLS&quot;, &quot;37&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Move-ins&quot;, &quot;22&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Real Estate&quot;, &quot;24&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Referrals&quot;, &quot;1&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Reinstates&quot;, &quot;44&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Relocation&quot;, &quot;21&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Self-generated&quot;, &quot;40&quot;,
IF ( TEXT(HHAU_Group__c) = &quot;Telemarketing&quot;, &quot;12&quot;,
NULL
)))))))))))))))))))))))</formula>
        <inlineHelpText>Returns the Energy Acquisition Code for the HHAU group or HHAU sub-group chosen.</inlineHelpText>
        <label>HHAU-Energy Acquisition Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHAU__c</fullName>
        <label>HHAU</label>
        <picklist>
            <controllingField>HHAU_Group__c</controllingField>
            <picklistValues>
                <fullName>1013BSI3168</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2NDOPINION 3570</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5Linx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA Sold Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABARBER 3561</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABINGTON 2830</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acct Exec Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCT EXEC CODE PENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acct Exec Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCT EXEC INTERNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACELANDSCAPE 452</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Besthomeheatingoil.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE heatingoil.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE heatingoildeals.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE njheatingoil.org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE propane.pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE propane USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE TELEMARKETING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHI 2845</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIROSMITH 2572</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie&apos;s List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATAFURI 2841</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAECHLE 3106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELLONE 3535</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben FM Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best of Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Business Bureau</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HWH_Type__c</fullName>
        <description>What type of HWH does the customer have?</description>
        <inlineHelpText>Determine the type of HWH the customer has.</inlineHelpText>
        <label>HWH Type</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HW_Gallons__c</fullName>
        <label>HW Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heated_Rooms__c</fullName>
        <label># Heated Rooms</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heating_Source__c</fullName>
        <description>What type of fuel source does this customer have?</description>
        <inlineHelpText>Determine the type of fueld source the customer has.</inlineHelpText>
        <label>Heating Source</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heating_System__c</fullName>
        <description>What type of heating system does the customer have?</description>
        <inlineHelpText>Determine the type of heating system the customer has.</inlineHelpText>
        <label>Heating System</label>
        <picklist>
            <picklistValues>
                <fullName>Baseboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Verify__c</fullName>
        <formula>Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heated__c</fullName>
        <label>How Is Your Water Heated?</label>
        <picklist>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Style__c</fullName>
        <description>What style home does the customer have?</description>
        <inlineHelpText>Determine the style home the customer has.</inlineHelpText>
        <label>House Style</label>
        <picklist>
            <picklistValues>
                <fullName>Bi Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Cod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>House_Use_Oil__c</fullName>
        <label>Does House Use Oil?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Not_Tank_Installed__c</fullName>
        <label>If Not New Service, Tank Installed Now?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Oil_What_For__c</fullName>
        <label>If House Uses Oil, What For?</label>
        <picklist>
            <picklistValues>
                <fullName>Heat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat/HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Important_Dates_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity - Oil - Summary Section</description>
        <label>Important Dates Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_soil_sample_Echosign__c</fullName>
        <formula>if( Includes_soil_sample_and_letter__c = TRUE, &quot;Price includes soil sample and letter certifying removal.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Includes soil sample_Echosign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Includes_soil_sample_and_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes soil sample and letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Above_Ground_Oil_Tank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Above Ground Oil Tank?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Underground_Oil_Tank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Underground Oil Tank?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>Used by Installation Team</description>
        <inlineHelpText>Date of Equipment Installation</inlineHelpText>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Location_Description__c</fullName>
        <label>Installation Location (Description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <label>Installed Product</label>
        <picklist>
            <picklistValues>
                <fullName>A/C New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Retro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbestos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ducts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Install__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Financing - Interest Rate</inlineHelpText>
        <label>Interest Rate-Install</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_In_Hearing_About_Security__c</fullName>
        <label>Interested In Hearing About Security?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_In__c</fullName>
        <label>Interested In</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment Offers</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Budget Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Complete__c</fullName>
        <label>Job Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <description>Used By Installation Team.</description>
        <inlineHelpText>Installation Job #</inlineHelpText>
        <label>Job #</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_Factor__c</fullName>
        <label>K Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_Status__c</fullName>
        <label>(LMS) Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Name__c</fullName>
        <label>Landlord Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Phone__c</fullName>
        <label>Landlord Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Landlord_Service_Acct__c</fullName>
        <inlineHelpText>Enter landlord&apos;s service account #.  Ex. 10-123456</inlineHelpText>
        <label>Landlord Service Acct#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>TEXT(Language__c)</formula>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Credit_Check_Record_ID__c</fullName>
        <label>Last Credit Check Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Delivery Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Info_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity - Oil - Summary Section</description>
        <label>Lead Info Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_Material__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Calculation based on rollup of Direct Cost records of Type = Major.</inlineHelpText>
        <label>Major Material</label>
        <summarizedField>Installation_Direct_Costs__c.AmountMajor__c</summarizedField>
        <summaryFilterItems>
            <field>Installation_Direct_Costs__c.Direct_Cost_Type__c</field>
            <operation>equals</operation>
            <value>Major</value>
        </summaryFilterItems>
        <summaryForeignKey>Installation_Direct_Costs__c.Opportunitydel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manf_Rebates_Allowance__c</fullName>
        <description>Used by Installation Team</description>
        <inlineHelpText>Installation - Direct Cost - Manufacturer&apos;s Rebate Allowance.</inlineHelpText>
        <label>Manf Rebates Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Comm_Amount__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Commissions - Manual Commissions Amount</inlineHelpText>
        <label>Manual Comm Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Comm__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Commissions - Manual Commission</inlineHelpText>
        <label>Manual Comm</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Misc_Material__c</fullName>
        <description>Used by the Installation Team.</description>
        <inlineHelpText>Calculation based on rollup of Direct Cost records of Type = Minor.</inlineHelpText>
        <label>Misc. Material</label>
        <summarizedField>Installation_Direct_Costs__c.AmountMajor__c</summarizedField>
        <summaryFilterItems>
            <field>Installation_Direct_Costs__c.Direct_Cost_Type__c</field>
            <operation>equals</operation>
            <value>Minor</value>
        </summaryFilterItems>
        <summaryForeignKey>Installation_Direct_Costs__c.Opportunitydel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MyAttachment__c</fullName>
        <formula>if( Service_Company_Oppty__c = &quot;Petro Home Services&quot;, 

    case( Delivery_State_Province__c, &quot;New Jersey&quot;, &quot;015G0000005TPJi&quot;, &quot;Connecticut&quot;, &quot;015G0000005TPJi&quot;, &quot;Maryland&quot;, &quot;015G0000005TPJi&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MyAttachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>First_Name__c  &amp; &quot; &quot; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_Amt__c</fullName>
        <description>Used by Installation Team.</description>
        <formula>Gross_P_L_B4_Sales_Comm__c -  Sales_Comm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installation - $ Net Revenue</inlineHelpText>
        <label>$ Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Service__c</fullName>
        <label>New Service?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_For_Review__c</fullName>
        <label>Notes For Credit Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_From_Review__c</fullName>
        <label>Notes From Credit Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumType_Tank_s_Being_Installed__c</fullName>
        <label>Number &amp; Type of Tank(s) Being Installed</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Budget_Payments__c</fullName>
        <label>z/ # Budget Payments</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_Of_Prospect_Service_Contracts__c</fullName>
        <label># Of Prospect Service Contracts</label>
        <summaryForeignKey>Prospect_Service_Contract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Budget_Payments__c</fullName>
        <formula>CASE( Budget_Start_Month_number__c,
1, 5,
2, 4,
9, 12,
10, 8,
11, 7,
12, 6,
12
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Budget Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Oil_Tanks_Being_Removed__c</fullName>
        <label>Number of Oil Tanks Being Removed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <inlineHelpText>If you selected either Multi Family Mixed Use or Multi Family Residential as property type,  ask for # of units and enter here.</inlineHelpText>
        <label>Number of Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Of_Heated_Rooms_budget_section__c</fullName>
        <label>Number Of Heated Rooms</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>L-{0000000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_for_data_load__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Opportunity ID for data load</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overrack_Deviation__c</fullName>
        <label>Overrack(Deviation)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Override?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Ceiling_2Yr__c</fullName>
        <label>Override Ceiling 2 Year</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Ceiling_Initial__c</fullName>
        <label>Override Ceiling Initial</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Ceiling_Limit__c</fullName>
        <label>Override Ceiling Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
</CustomObject>